Clean up competitor comparisons, rename header, improve code block readability
- Remove negative references to Electron, Tauri, and Neutralinojs across docs
- Rename header from "LightShell" to "LightShell Docs"
- Improve inline code contrast with darker background and border
- Increase code block padding, font size, and line height for readability

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -3,7 +3,7 @@ title: LightShell
 description: Build native desktop apps with JavaScript. Ship them under 5MB.
 template: splash
 hero:
-  tagline: Build native desktop apps with JavaScript. Under 5MB. No Electron.
+  tagline: Build native desktop apps with JavaScript. Ship them under 5MB.
   actions:
     - text: Get Started
       link: /getting-started/
@@ -45,7 +45,7 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
     <div class="hw-body">
       <div class="hw-icon">5M</div>
       <h3>Under 5MB</h3>
-      <p>60x smaller than Electron. No bundled browser engine or V8.</p>
+      <p>Ship native apps under 5MB. No bundled browser engine or runtime.</p>
     </div>
   </div>
 
