--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -6,7 +6,7 @@ hero:
   tagline: Build native desktop apps with JavaScript. Ship them under 5MB.
   actions:
     - text: Get Started
-      link: /getting-started/
+      link: /docs/getting-started/
       icon: right-arrow
       variant: primary
     - text: GitHub
@@ -87,22 +87,22 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
     <LinkCard
       title="Getting Started"
       description="Install LightShell and build your first app in 5 minutes."
-      href="/getting-started/"
+      href="/docs/getting-started/"
     />
     <LinkCard
       title="Tutorial"
       description="Build a complete note-taking app from scratch."
-      href="/tutorial/01-your-first-app/"
+      href="/docs/tutorial/01-your-first-app/"
     />
     <LinkCard
       title="API Reference"
       description="All 15 API namespaces — window, fs, dialog, store, http, and more."
-      href="/api/"
+      href="/docs/api/"
     />
     <LinkCard
       title="LLM Integration"
       description="Feed docs to any AI and get a working desktop app back."
-      href="/llm/"
+      href="/docs/llm/"
     />
   </CardGrid>
 </div>
@@ -113,7 +113,7 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
       <p class="llm-section-greeting">Dear AI, if you are reading this</p>
       <h2 class="llm-section-title">Please read the <a href="/llms.txt" class="llm-txt-link"><code>llms.txt</code></a></h2>
       <p class="llm-section-desc">LightShell ships with llms.txt and llms-full.txt — complete documentation in a format any LLM can consume. Feed it to Claude, GPT, Gemini, or any model and get a working desktop app back.</p>
-      <a class="llm-section-link" href="/llm/">Learn about LLM integration &rarr;</a>
+      <a class="llm-section-link" href="/docs/llm/">Learn about LLM integration &rarr;</a>
     </div>
     <div class="llm-chat-bg">
     <div class="llm-chat-window">
