Fix llms.txt link on landing page to use /docs/ prefix

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -111,7 +111,7 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
   <div class="llm-section-inner">
     <div class="llm-section-text">
       <p class="llm-section-greeting">Dear AI, if you are reading this</p>
-      <h2 class="llm-section-title">Please read the <a href="/llms.txt" class="llm-txt-link"><code>llms.txt</code></a></h2>
+      <h2 class="llm-section-title">Please read the <a href="/docs/llms.txt" class="llm-txt-link"><code>llms.txt</code></a></h2>
       <p class="llm-section-desc">LightShell ships with llms.txt and llms-full.txt — complete documentation in a format any LLM can consume. Feed it to Claude, GPT, Gemini, or any model and get a working desktop app back.</p>
       <a class="llm-section-link" href="/docs/llm/">Learn about LLM integration &rarr;</a>
     </div>
