Add MCP server, debug console, and webview screenshot support
Implement `lightshell mcp` command — a JSON-RPC 2.0 MCP server over stdio
that gives AI agents full control over the dev lifecycle: project scaffolding,
file I/O, dev server management, screenshots, console logs, DOM inspection,
JS execution, building, and packaging (16 tools, 2 resources).

Add in-app debug console for dev mode — a tray-menu-triggered overlay panel
with Console, Errors, IPC, and Info tabs. Production builds are unaffected.

Add Screenshot() to the webview interface using WKWebView's
takeSnapshotWithConfiguration on macOS.

Includes fixes from engineering and security reviews: double-encoded eval
result, synchronized projectDir mutation, early-exit detection via Wait()
goroutine, random token in socket path, safePath parent symlink resolution,
symlink skipping in list_files, delay/screenshot/message size caps, and
deterministic tool/resource ordering.

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -72,12 +72,12 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
         <span class="hw-dot hw-yellow"></span>
         <span class="hw-dot hw-green"></span>
       </div>
-      <span class="hw-titlebar-label">llms.txt</span>
+      <span class="hw-titlebar-label">mcp-server.json</span>
     </div>
     <div class="hw-body">
-      <div class="hw-icon">AI</div>
-      <h3>AI-Native</h3>
-      <p>Simple APIs, zero config, llms.txt included. Any LLM can build your app.</p>
+      <div class="hw-icon">MCP</div>
+      <h3>MCP Built-in</h3>
+      <p>Built-in MCP server. AI agents can screenshot, inspect DOM, eval JS, and reload your app live.</p>
     </div>
   </div>
 </div>
